// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reflection Template: should compile callable reflection 1`] = `
"{ breadcrumbsPartial }

# { pageTitlePartial }

## Callable

### CallableReflection

{ signaturePartial }

{ tocPartial }"
`;

exports[`Reflection Template: should compile enum reflection 1`] = `
"{ breadcrumbsPartial }

# { pageTitlePartial }

{ tocPartial }

{ groupsPartial }"
`;

exports[`Reflection Template: should compile implemented class reflection 1`] = `
"{ breadcrumbsPartial }

# { pageTitlePartial }

## Implements

- [\`ReflectionClass\`]( ReflectionClass )

{ tocPartial }

{ groupsPartial }"
`;

exports[`Reflection Template: should compile indexable reflection 1`] = `
"{ breadcrumbsPartial }

# { pageTitlePartial }

## Indexable

{ indexSignatureTitlePartial }

{ tocPartial }"
`;

exports[`Reflection Template: should compile project reflection 1`] = `
"{ breadcrumbsPartial }

# { pageTitlePartial }

{ tocPartial }

{ groupsPartial }"
`;

exports[`Reflection Template: should compile project reflection with options 1`] = `
"{ tocPartial }

{ groupsPartial }"
`;
